primera version de index

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,8 +1,9 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+
+* {
+  box-sizing: border-box;
 }
 
-a {
-  color: #00B7FF;
+body {
+ font-family: 'Montserrat', sans-serif;
 }
