--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,10 +2,83 @@
 <html>
   <head>
     <title> SLC Componentes Electrónicos </title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/styleIndex.css' />
+    <meta name= "viewport" content="width= device-width">
   </head>
+
   <body>
-    <h1>Acá va la home</h1>
-    <p>: )</p>
+      <div class="container">
+          <!-- main-header -->
+          <header class="main-header">
+            <!-- logo -->
+            <div class="logo">
+              <a href="/">
+                <img src="/images/logo.png" alt="Logo SLC">
+              </a>
+            </div>
+            <!-- Left-navbar -->
+            <nav class="left-navbar">
+             <p> Componentes Electrónicos</p>
+            </nav>
+            <!-- right-navbar -->
+            <nav class="right-navbar">
+              <ul>
+                  <li><a href="/">Inicio</a></li>
+                  <li><a href="/register" target="blank">Ingresá</a></li>
+                  <li><a href="/register" target="blank">Registrate</a></li>
+              </ul>
+            </nav>
+          </header>
+    
+<!-- buscador -->
+<div class="wrap">
+    <div class="search">
+       <input type="text" class="searchTerm" placeholder="Buscá por producto, por categoría o por marca">
+       <button type="submit" class="searchButton"> &#128270;
+        </button>
+      
+    </div>
+ </div>
+<!-- destacados -->
+<h1 class="destacados"> Destacados</h1>
+
+<!-- main-content -->
+<div class="main-content">
+<section class="product-category">
+    <article class="detail-category1"> Arduino
+    <a href="#" class="call-to-action">Ver Categoría</a>
+			</article>
+
+
+  <article class="detail-category1"> Raspberry
+  <a href="#" class="call-to-action">Ver Categoría</a>
+    </article>
+
+
+  <article class="detail-category2"> PLCs
+  <a href="#" class="call-to-action">Ver Categoría</a>
+    </article>
+
+  </section>
+
+<section class="product-category2">
+  <article class="detail-category3"> Combos y Ofertas
+  <a href="#" class="call-to-action">Ver Categoría</a>
+    </article>
+
+</section>
+
+</div>
+<!-- pie -->
+<footer>
+<nav class="footer-navbar">
+  <ul>
+      <li><a href="/" target="blank">Terminos y Condiciones</a></li>
+      <li><a href="/" target="blank">Política de Privacidad</a></li>
+      <li><a href="/" target="blank">Ayuda</a></li>
+  </ul>
+</nav>
+</footer>
+
   </body>
 </html>
