--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-      <div class="container">
+      <div class="container-header">
           <!-- main-header -->
           <header class="main-header">
             <!-- logo -->
@@ -43,7 +43,7 @@
 <h1 class="destacados"> Destacados</h1>
 
 <!-- main-content -->
-<section class="product-category">
+<section class="container-productos">
     <article class="detail-category1"> Arduino
     <a href="#" class="call-to-action">Ver Categoría</a>
 			</article>
@@ -60,7 +60,7 @@
 
   </section>
 
-<section class="product-category2">
+<section class="container-productos2">
   <article class="detail-category3"> Combos y Ofertas
   <a href="#" class="call-to-action">Ver Categoría</a>
     </article>
