ajustes header y legales

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,6 +26,7 @@
                   <li><a href="/">Inicio</a></li>
                   <li><a href="/register" target="blank">Ingresá</a></li>
                   <li><a href="/register" target="blank">Registrate</a></li>
+                  <li><a href="/productCart" target="blank"> <img src="/images/carrito16px.png"></a></li>
               </ul>
             </nav>
           </header>
@@ -71,9 +72,9 @@
 <footer>
 <nav class="footer-navbar">
   <ul>
-      <li><a href="/" target="blank">Terminos y Condiciones</a></li>
-      <li><a href="/" target="blank">Política de Privacidad</a></li>
-      <li><a href="/" target="blank">Ayuda</a></li>
+      <li><a href="/legal" target="blank">Terminos y Condiciones</a></li>
+      <li><a href="/legal" target="blank">Política de Privacidad</a></li>
+      <li><a href="#" target="blank">Ayuda</a></li>
   </ul>
 </nav>
 </footer>
