--- a/app/views/index.html
+++ b/app/views/index.html
@@ -45,25 +45,32 @@
 
 <!-- main-content -->
 <section class="container-productos">
-    <article class="detail-category1"> Arduino
+    <article class="detail-category1Color"> 
+    <h6>ARDUINO</h6>
     <a href="#" class="call-to-action">Ver Categoría</a>
 			</article>
 
 
-  <article class="detail-category1"> Raspberry
-  <a href="#" class="call-to-action">Ver Categoría</a>
+  <article class="detail-category1"> 
+    <h6>RASPBERRRY</h6>    
+        <a href="#" class="call-to-action">Ver Categoría</a>
+        <img src="/images/Raspberri_Home.jpg">
     </article>
 
 
-  <article class="detail-category2"> PLCs
+  <article class="detail-category2"> 
+  <h6>PLCs</h6>
   <a href="#" class="call-to-action">Ver Categoría</a>
+  <img src="/images/PLC_Home.jpg">
     </article>
 
   </section>
 
 <section class="container-productos2">
-  <article class="detail-category3"> Combos y Ofertas
+  <article class="detail-category3"> 
+  <h6>COMBOS Y OFERTAS </h6>
   <a href="#" class="call-to-action">Ver Categoría</a>
+  <img src="/images/Combos_home.png" alt="Combos y Ofertas">
     </article>
 
 </section>
