--- a/app/views/productCart.html
+++ b/app/views/productCart.html
@@ -17,13 +17,14 @@
               Componentes Electrónicos
           </div>
       </div>
+      <div class="titulo">
+        Carrito de Compras
+      </div>
       <div class="compras">
-          <div class="titulo">
-              Carrito de Compras
-            </div>
+          
         <div class="unItem"> 
-          <div class="imagen">
-              <img src="/images/raspberry.JPG" alt="una compra"> 
+          <div class="prodImagen">
+              <img src="/images/raspberry.JPG" alt="una compra" class="imagen"> 
               </div>
           <div class="tituloYCantPrecio">
               <div class="tituloProducto">Raspberry Pi 3 Plus con descripcion super larga aaaa</div>
@@ -34,29 +35,25 @@
         </div>
         
         <div class="unItem"> 
-            <div class="imagen">
-                <img src="/images/puenteRect.JPG" alt="una compra"> 
+            <div class="prodImagen">
+                <img src="/images/puenteRect.JPG" alt="una compra" class="imagen"> 
                 </div>
             <div class="tituloYCantPrecio">
-                <div class="tituloProducto">Puente Rectificador 1.5A con descripción super larga aa</div>
+                <div class="tituloProducto">Puente Rectificador 1.5A con descripción super larga</div>
                 <div class="precioCant">
                     <input class="cantidad" type="number" value="2" min="1" class="w-9">
                     <div>$232</div> </div>
             </div>
           </div>
-   <div class="unItem">  
-        
+   
+        <div class="resumen">
             <div class="seguiComprando"> <a href="/"> seguir comprando </a></div>
             <div class="precioFinal">
               <div class="resaltarTexto"> Total: </div>
               <div class="superResaltarTexto"> $1764.82</div>
               <button type="submit" class="btn btn-primary">Comprar</button>
               </div>
-        
            </div>
-        
-      </div>
-
-    
+          </div>
   </body>
 </html>
