--- a/app/views/productCart.html
+++ b/app/views/productCart.html
@@ -65,7 +65,7 @@
         <div class="resumen">
             <span class="seguiComprando"> <a href="/"> seguir comprando </a></span>
             
-              <span class="resaltarTexto"> Total: </span>
+              <span class="resaltarTexto"> TOTAL   </span>
               <span class="superResaltarTexto"> $1764.82</span>
               <button type="submit" class="btn btn-primary">Comprar</button>
             </div>
