--- a/app/public/stylesheets/productCart.css
+++ b/app/public/stylesheets/productCart.css
@@ -26,6 +26,7 @@
     max-width: 1140px;
     margin: auto;
     overflow: hidden;
+    width:70%
   }
   
   .main-header {
@@ -50,6 +51,7 @@
     float: right;
     margin-top: 20px;
     font-size: 12px;
+    margin-right: 10%;
   }
   
   .left-navbar p,
@@ -120,20 +122,22 @@
 
 .seguiComprando{
     align-self: flex-end;
+    font-size: 90%;
 }
 
 .resaltarTexto{
-    font-size: 170%;
+    font-size: 150%;
     align-self: center;
     justify-self: flex-end;
-    margin-left: 20%;
+    margin-left: 18%;
+    margin-right: 1%;
 }
 
 .superResaltarTexto{
     font-size: 200%;
     font-weight: bolder;
     justify-self: flex-end;
-    margin-right: 1%;
+    margin-right: 3%;
 }
 
 
