--- a/app/views/productCart.html
+++ b/app/views/productCart.html
@@ -14,7 +14,7 @@
         <!-- logo -->
         <div class="logo">
           <a href="/">
-            <img src="/images/logo.png" alt="Logo SLC">
+            <img src="/images/logo.png" alt="Logo SLC" class="elLogo">
           </a>
         </div>
         <!-- Left-navbar -->
@@ -45,7 +45,7 @@
               <div class="tituloProducto">Raspberry Pi 3 Plus con descripcion super larga aaaa</div>
               <div class="precioCant">
                   <input class="form-control col-sm-2" type="number" value="2" min="1" max="999">
-                  <div>$1532</div> </div>
+                  <div>$1532.56</div> </div>
           </div>
         </div>
         
@@ -58,7 +58,7 @@
                 <div class="precioCant">
                   <input type=number class="form-control col-md-2" value=42 min=0 max=99>
                     
-                    <div>$232</div> </div>
+                    <div>$232.26</div> </div>
             </div>
           </div>
    
@@ -67,7 +67,7 @@
             
               <span class="resaltarTexto"> TOTAL   </span>
               <span class="superResaltarTexto"> $1764.82</span>
-              <button type="submit" class="btn btn-primary">Comprar</button>
+              <span class="botonComprar"> <button type="submit" class="btn btn-primary">Comprar</button> </span>
             </div>
             
           </div>
