--- a/app/public/stylesheets/productCart.css
+++ b/app/public/stylesheets/productCart.css
@@ -8,7 +8,11 @@
    font-family: 'Montserrat', sans-serif;
    padding: 1%;
   }
-  
+ 
+  .elLogo{
+    width:100%;
+  }
+
   /*Header*/
   ul,
   ol {
@@ -42,7 +46,7 @@
     display: inline-block;
     vertical-align: middle;
   }
-  
+
   .left-navbar {
     margin-left: 2px;
   }
@@ -65,13 +69,6 @@
     color: #000000;
   }
 
-
-
-.tituloH{
-    align-self: center;
-    color: #597ff9;
-}
-
 .titulo{
     align-self: flex-start;
     font-size: 140%;
@@ -83,7 +80,6 @@
 .compras{
     display:flex;
     font-family: 'Montserrat', sans-serif;
-    color: #5A5756;
     padding: 1%;
     flex-direction: column;
     align-items: flex-start;
@@ -95,6 +91,7 @@
 
 .imagen{
     border: 1px;
+    width: 100%;
 }
 
 .tituloYCantPrecio{
@@ -106,11 +103,14 @@
 
 .tituloProducto{
     align-self: flex-start;
+    color: #5A5756;
     
 }
 
 .precioCant{
     display: flex;
+    font-weight: bolder;
+    font-size: large;
 }
 
 .resumen{
@@ -126,18 +126,26 @@
 }
 
 .resaltarTexto{
-    font-size: 150%;
+    display: flex;
+    font-size: larger;
+    color:#000000;
     align-self: center;
     justify-self: flex-end;
-    margin-left: 18%;
+    margin-left: 20%;
     margin-right: 1%;
 }
 
 .superResaltarTexto{
+    display: flex;
     font-size: 200%;
+    color: #000000;
     font-weight: bolder;
     justify-self: flex-end;
     margin-right: 3%;
+}
+
+.botonComprar{
+  display: flex;
 }
 
 
