--- a/app/views/productCart.html
+++ b/app/views/productCart.html
@@ -67,7 +67,8 @@
             
               <span class="resaltarTexto"> TOTAL   </span>
               <span class="superResaltarTexto"> $1764.82</span>
-              <span class="botonComprar"> <button type="submit" class="btn btn-primary">Comprar</button> </span>
+              <div class="buttonComprar">Continuar Compra</div>
+              <!-- <span class="botonComprar"> <button type="submit" class="btn btn-primary">Comprar</button> </span> -->
             </div>
             
           </div>
